--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "tutorial_fcc_mern_productstoreapp": "file:..",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
